...
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPe-e0-pKx">
                                            <rect key="frame" x="170" y="13" width="224" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="cellLabel">
                                                <accessibilityTraits key="traits" staticText="YES"/>
                                            </accessibility>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier " value="cellLabel"/>
                                            </userDefinedRuntimeAttributes>
                                        </label>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dkA-hj-stZ">
                                            <rect key="frame" x="20" y="-15" width="106" height="72"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="cellImage"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier " value="cellImage"/>
                                            </userDefinedRuntimeAttributes>
                                        </imageView>
                                    </subviews>
                                    <userDefinedRuntimeAttributes>
...
                                    <outlet property="cellImageView" destination="dkA-hj-stZ" id="kgU-1w-Aix"/>
                                    <outlet property="cellLabel" destination="SPe-e0-pKx" id="r4e-7l-LIV"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" value="myTable">
                                <string key="keyPath">if tableCells.count &gt; 0 {
    let count: Int = (tableCells.count - 1)
 
    let promise = expectation(description: "Wait for table cells")
 
    for i in stride(from: 0, to: count , by: 1) {
...
                        <subviews>
                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lp4-mL-rE6">
                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem id="KYi-lU-Am5">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="3Sa-uR-MAk">
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="backToHome"/>
                                            </userDefinedRuntimeAttributes>
                                            <connections>
                                                <action selector="goBack:" destination="AOc-fA-Tt7" id="wMB-S1-dkB"/>
                                            </connections>
...
                                            <rect key="frame" x="99" y="8" width="138" height="140"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="
                                            <rect key="frame" x="69" y="170" width="199" height="35"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="mainCellLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                    <connections>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="2gx-yF-uz1"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EPh-zG-ux6">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="myNavBar"/>
                        </userDefinedRuntimeAttributes>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="lsM-Zf-q1v" kind="relationship" relationship="rootViewController" id="P6b-nl-x5g"/>
                    </connections>
...
