...
            return cell
      }
      
      override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
            
            if let detailsModel = homeScreenPresenter?.itemSelectedAtIndex( ind : indexPath.row){
                  let detailsView : DetailsScreenView = UIStoryboard(name: "Main", bundle: nil).instantiateViewController(withIdentifier: "detailsVC") as! DetailsScreenView
                  let detailsPresenter = DetailsScreenPresenter(viewProtocol: detailsView, modelProtocol: detailsModel)
                  detailsView.setPresenter(presnter: detailsPresenter)
                  self.present(detailsView, animated: true, completion: nil)
                  
            }
            
...
